Learn Switch Map in RXJS

--- a/src/app/feature/dashboard/display-page/display-page.component.html
+++ b/src/app/feature/dashboard/display-page/display-page.component.html
@@ -1,2 +1,5 @@
-<app-new-task></app-new-task>
-<app-show-task></app-show-task>
+<!-- <app-new-task></app-new-task>
+<app-show-task></app-show-task> -->
+
+<p>Work with Higher Level Components in Angular Rxjs Observable</p>
+<input type="text" placeholder="Search users..." [formControl]="searchControl"/>
