--- a/src/app/feature/dashboard/home-page/home-page.component.html
+++ b/src/app/feature/dashboard/home-page/home-page.component.html
@@ -23,10 +23,10 @@
   </ng-container>
 
   <!-- Password Column -->
-  <ng-container matColumnDef="password">
+  <!-- <ng-container matColumnDef="password">
     <th mat-header-cell *matHeaderCellDef>Password</th>
     <td mat-cell *matCellDef="let element">{{ element.password }}</td>
-  </ng-container>
+  </ng-container> -->
 
   <!-- Role Column -->
   <ng-container matColumnDef="role">
@@ -34,15 +34,21 @@
     <td mat-cell *matCellDef="let element">{{ element.role }}</td>
   </ng-container>
 
+  <!-- Register Time Column -->
+  <ng-container matColumnDef="registerTimestamp">
+    <th mat-header-cell *matHeaderCellDef>Register Time</th>
+    <td mat-cell *matCellDef="let element">{{ element.registerTimestamp }}</td>
+  </ng-container>
+
   <!-- Contact Numbers Column -->
-  <ng-container matColumnDef="contactNumbers">
+  <!-- <ng-container matColumnDef="contactNumbers">
     <th mat-header-cell *matHeaderCellDef>Contact Numbers</th>
     <td mat-cell *matCellDef="let element">
       @for (contact of element.contactNumbers; track $index) {
         <div>{{ contact.number }}</div>
       }
     </td>
-  </ng-container>
+  </ng-container> -->
 
   <ng-container matColumnDef="editOptions">
     <th mat-header-cell *matHeaderCellDef>Edit Options</th>
