--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link active" routerLink="/">Home</a>
         </li>
         <li class="nav-item">
-          <ng-content></ng-content> <!-- Example for Ng Content -->
+          <!-- <ng-content></ng-content> Example for Ng Content -->
           <!-- <ng-content select=".selector"></ng-content> -->
           
         </li>
