Practice the Custom Pipes and Implemented the Register Date and time ago.

--- a/src/app/feature/dashboard/display-names/display-names.component.html
+++ b/src/app/feature/dashboard/display-names/display-names.component.html
@@ -8,7 +8,7 @@
       </mat-card-header>
       <mat-card-actions>
         <button matButton class="btn btn-primary" (click)="onViewClick(user)">
-          View
+          Add to Card
         </button>
       </mat-card-actions>
     </mat-card>
